@@ -38,7 +38,25 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|HashMap
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
 import|;
 end_import
 begin_import
@@ -262,6 +280,222 @@ name|CacheValue
 argument_list|>
 argument_list|()
 decl_stmt|;
+DECL|field|closeListeners
+specifier|protected
+name|Map
+argument_list|<
+name|Directory
+argument_list|,
+name|List
+argument_list|<
+name|CloseListener
+argument_list|>
+argument_list|>
+name|closeListeners
+init|=
+operator|new
+name|HashMap
+argument_list|<
+name|Directory
+argument_list|,
+name|List
+argument_list|<
+name|CloseListener
+argument_list|>
+argument_list|>
+argument_list|()
+decl_stmt|;
+DECL|interface|CloseListener
+specifier|public
+interface|interface
+name|CloseListener
+block|{
+DECL|method|onClose
+specifier|public
+name|void
+name|onClose
+parameter_list|()
+function_decl|;
+block|}
+annotation|@
+name|Override
+DECL|method|addCloseListener
+specifier|public
+name|void
+name|addCloseListener
+parameter_list|(
+name|Directory
+name|dir
+parameter_list|,
+name|CloseListener
+name|closeListener
+parameter_list|)
+block|{
+synchronized|synchronized
+init|(
+name|this
+init|)
+block|{
+if|if
+condition|(
+operator|!
+name|byDirectoryCache
+operator|.
+name|containsKey
+argument_list|(
+name|dir
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Unknown directory: "
+operator|+
+name|dir
+operator|+
+literal|" "
+operator|+
+name|byDirectoryCache
+argument_list|)
+throw|;
+block|}
+name|List
+argument_list|<
+name|CloseListener
+argument_list|>
+name|listeners
+init|=
+name|closeListeners
+operator|.
+name|get
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|listeners
+operator|==
+literal|null
+condition|)
+block|{
+name|listeners
+operator|=
+operator|new
+name|ArrayList
+argument_list|<
+name|CloseListener
+argument_list|>
+argument_list|()
+expr_stmt|;
+name|closeListeners
+operator|.
+name|put
+argument_list|(
+name|dir
+argument_list|,
+name|listeners
+argument_list|)
+expr_stmt|;
+block|}
+name|listeners
+operator|.
+name|add
+argument_list|(
+name|closeListener
+argument_list|)
+expr_stmt|;
+name|closeListeners
+operator|.
+name|put
+argument_list|(
+name|dir
+argument_list|,
+name|listeners
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Override
+DECL|method|doneWithDirectory
+specifier|public
+name|void
+name|doneWithDirectory
+parameter_list|(
+name|Directory
+name|directory
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+synchronized|synchronized
+init|(
+name|this
+init|)
+block|{
+name|CacheValue
+name|cacheValue
+init|=
+name|byDirectoryCache
+operator|.
+name|get
+argument_list|(
+name|directory
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|cacheValue
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Unknown directory: "
+operator|+
+name|directory
+operator|+
+literal|" "
+operator|+
+name|byDirectoryCache
+argument_list|)
+throw|;
+block|}
+name|cacheValue
+operator|.
+name|doneWithDir
+operator|=
+literal|true
+expr_stmt|;
+if|if
+condition|(
+name|cacheValue
+operator|.
+name|refCnt
+operator|==
+literal|0
+condition|)
+block|{
+name|cacheValue
+operator|.
+name|refCnt
+operator|++
+expr_stmt|;
+comment|// this will go back to 0 in close
+name|close
+argument_list|(
+name|directory
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 comment|/*    * (non-Javadoc)    *     * @see org.apache.solr.core.DirectoryFactory#close()    */
 annotation|@
 name|Override
@@ -395,6 +629,48 @@ operator|.
 name|path
 argument_list|)
 expr_stmt|;
+name|List
+argument_list|<
+name|CloseListener
+argument_list|>
+name|listeners
+init|=
+name|closeListeners
+operator|.
+name|remove
+argument_list|(
+name|directory
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|listeners
+operator|!=
+literal|null
+condition|)
+block|{
+for|for
+control|(
+name|CloseListener
+name|listener
+range|:
+name|listeners
+control|)
+block|{
+name|listener
+operator|.
+name|onClose
+argument_list|()
+expr_stmt|;
+block|}
+name|closeListeners
+operator|.
+name|remove
+argument_list|(
+name|directory
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 block|}
