@@ -72,6 +72,19 @@ name|org
 operator|.
 name|apache
 operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|Directory
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|solr
 operator|.
 name|client
@@ -246,6 +259,21 @@ operator|.
 name|util
 operator|.
 name|NamedList
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+operator|.
+name|CachingDirectoryFactory
+operator|.
+name|CloseListener
 import|;
 end_import
 begin_import
@@ -2007,15 +2035,10 @@ name|deleteTmpIdxDir
 init|=
 literal|true
 decl_stmt|;
+specifier|final
 name|File
 name|indexDir
 init|=
-literal|null
-decl_stmt|;
-try|try
-block|{
-name|indexDir
-operator|=
 operator|new
 name|File
 argument_list|(
@@ -2024,7 +2047,14 @@ operator|.
 name|getIndexDir
 argument_list|()
 argument_list|)
-expr_stmt|;
+decl_stmt|;
+name|Directory
+name|oldDirectory
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
 name|downloadIndexFiles
 argument_list|(
 name|isFullCopyNeeded
@@ -2169,6 +2199,46 @@ name|deleteTmpIdxDir
 operator|=
 literal|false
 expr_stmt|;
+name|RefCounted
+argument_list|<
+name|IndexWriter
+argument_list|>
+name|iw
+init|=
+name|core
+operator|.
+name|getUpdateHandler
+argument_list|()
+operator|.
+name|getSolrCoreState
+argument_list|()
+operator|.
+name|getIndexWriter
+argument_list|(
+name|core
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|oldDirectory
+operator|=
+name|iw
+operator|.
+name|get
+argument_list|()
+operator|.
+name|getDirectory
+argument_list|()
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|iw
+operator|.
+name|decref
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 else|else
 block|{
@@ -2194,10 +2264,79 @@ argument_list|,
 name|successfulInstall
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+if|if
+condition|(
+name|isFullCopyNeeded
+condition|)
+block|{
+comment|// we have to do this before commit
+name|core
+operator|.
+name|getDirectoryFactory
+argument_list|()
+operator|.
+name|addCloseListener
+argument_list|(
+name|oldDirectory
+argument_list|,
+operator|new
+name|CloseListener
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|onClose
+parameter_list|()
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"removing old index directory "
+operator|+
+name|indexDir
+argument_list|)
+expr_stmt|;
+name|delTree
+argument_list|(
+name|indexDir
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|successfulInstall
+condition|)
+block|{
+if|if
+condition|(
+name|isFullCopyNeeded
+condition|)
+block|{
+comment|// let the system know we are changing dir's and the old one
+comment|// may be closed
+name|core
+operator|.
+name|getDirectoryFactory
+argument_list|()
+operator|.
+name|doneWithDirectory
+argument_list|(
+name|oldDirectory
+argument_list|)
+expr_stmt|;
+block|}
 name|doCommit
 argument_list|()
 expr_stmt|;
-block|}
 block|}
 name|replicationStartTime
 operator|=
@@ -2289,23 +2428,6 @@ expr_stmt|;
 name|delTree
 argument_list|(
 name|tmpIndexDir
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-name|LOG
-operator|.
-name|info
-argument_list|(
-literal|"removing old index directory "
-operator|+
-name|indexDir
-argument_list|)
-expr_stmt|;
-name|delTree
-argument_list|(
-name|indexDir
 argument_list|)
 expr_stmt|;
 block|}
