@@ -57,6 +57,19 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|common
+operator|.
+name|SolrException
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|core
 operator|.
 name|CoreContainer
@@ -397,8 +410,6 @@ name|e
 parameter_list|)
 block|{}
 block|}
-try|try
-block|{
 if|if
 condition|(
 name|indexWriter
@@ -406,12 +417,35 @@ operator|!=
 literal|null
 condition|)
 block|{
+try|try
+block|{
 name|indexWriter
 operator|.
 name|close
 argument_list|()
 expr_stmt|;
 block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|SolrException
+operator|.
+name|log
+argument_list|(
+name|log
+argument_list|,
+literal|"Error closing old IndexWriter"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+try|try
+block|{
 name|indexWriter
 operator|=
 name|createMainIndexWriter
