@@ -530,6 +530,9 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
+finally|finally
+block|{
 if|if
 condition|(
 name|infoStream
@@ -543,9 +546,6 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
-block|}
-finally|finally
-block|{
 name|isClosed
 operator|=
 literal|true
